# ReelResumeBuilderMP1

./: 404.html  500.html  README.md  achievements.html  add_employer_features.py  add_permanent_admin.py  add_playlist_tags.py  add_soft_delete.py  add_user_title.py  admin.py  ai_client.py  ai_matching.py  ai_service.py  analysis.html  analytics.py  app.log.1  app.log.2  app.py  auth.py  base.html  blueprints.py  candidates.html  company_profile.html  conftest.py  contact.html  cookie.html  create.html  csrf_error.html  custom.css  dashboard.html  edit.html  employer.py  employers.html  error.html  extensions.py  faq.html  footer.html  forgot_password.html  forms.py  generate.html  (+47 more)
admin/: list_users.html
analytics/: dashboard.html
auth/: login.html  reset_password.html
