[project]
name = "repl-nix-reelresumebuilder-1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "qrcode>=8.0",
    "werkzeug",
    "pillow",
    "flask-tus>=0.7.1",
    "sqlalchemy",
    "ua-parser>=0.18.0",
    "user-agents>=2.2.0",
    "ffmpeg-python>=0.2.0",
    "python-dotenv",
    "flask-mail>=0.10.0",
    "itsdangerous",
    "openai>=1.0.0",
    "textract",
    "huggingface-hub",
    "pdfplumber",
    "python-docx",
    "chardet",
    "pdfminer-six>=20231228",
    "python-magic>=0.4.27",
    "httpx==0.27.2",
    "flask-wtf>=1.2.2",
    "flask-cors>=5.0.0",
    "transformers>=4.47.1",
    "scikit-learn>=1.6.0",
    "flask-migrate>=4.0.7",
    "numpy>=2.2.1",
    "backoff>=2.2.1",
    "flake8>=7.1.1",
    "pylint>=3.3.3",
    "pytest>=8.3.4",
    "pytest-flask>=1.3.0",
]
